# ImageGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ImageGenerator/: Generators.hpp  ImageGenerator.hpp
src/: Main.cpp
src/Generator/: ColorGenerator.cpp  ImageGenerator.cpp  MandelbrotGenerator.cpp  RandomGenerator.cpp  stbImplementation.cpp
